[package]
name = "nfssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
clap = "4.5.8"
clap_derive = "4.5.8"
intaglio = "1.9.1"
nfsserve = "0.10.2"
russh = { version = "0.43.0", features = ["openssl"] }
russh-config = "0.7.1"
russh-keys = { version = "0.43.0", features = ["openssl"]}
russh-sftp = "2.0.1"
tokio = "1.38.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
whoami = "1.5.1"

# Async / performance issues caused by bug in russh-sftp, local version applies https://github.com/AspectUnk/russh-sftp/pull/34/files
[patch.crates-io]
russh-sftp = { path = "/Users/michael/devel/russh-sftp" }
