[package]
name = "nfssh"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
clap = "4.5.8"
clap_derive = "4.5.8"
coarsetime = "0.1.34"
dashmap = "6.0.1"
intaglio = "1.9.1"
nfsserve = "0.10.2"
rpassword = "7.3.1"
russh = { version = "0.43.0", features = ["openssl"] }
russh-config = "0.7.1"
russh-keys = { version = "0.43.0", features = ["openssl"]}
russh-sftp = "2.0.1"
tokio = "1.38.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
whoami = "1.5.1"

# Async / performance issues caused by bug in russh-sftp https://github.com/AspectUnk/russh-sftp/pull/34/files
[patch.crates-io]
russh-sftp = { git = "https://github.com/gulrotkake/russh-sftp", rev="e5bf073" }
